--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
-#-   repo: https://github.com/teyuanliu/pre-commit-hook
-#    rev: 8871cd587658087f4b7a298670e72f13033148e8
-#    hooks:
-#    -   id: update-zola-post-updated-date
+-   repo: https://github.com/teyuanliu/pre-commit-hook
+    rev: 8871cd587658087f4b7a298670e72f13033148e8
+    hooks:
+    -   id: update-zola-post-updated-date
