--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
--   repo: https://github.com/teyuanliu/pre-commit-hook
-    rev: 557ea637e90e5e743ddb716a16a5be61bfdce89f
+-   repo: https://github.com/teyuanliu/pre-commit-hooks
+    rev: v0.1.2
     hooks:
     -   id: update-zola-post-updated-date
